docs/new/styles.less
@font-face {
  font-family: Inter;
  src: url("TikTokSans-Medium.ttf");
}
@font-face {
  font-family: InterBold;
  src: url("TikTokSans_18pt_Expanded-SemiBold.ttf");
}

@color-beige: #D9D5D1;
@color-green: #919E90;
@color-gray: #636363;
@color-white: #FAFAFA;
@color-black: #343434;

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}
.hidden {
  display: none !important;
}

/* desktop */
@media screen {
  .grid {
    margin: 0 auto;
    padding: 20px 80px;
    width: 1440px;

    display: grid;
    grid-template-columns: repeat(12, 1fr);
    grid-auto-rows: auto;
    gap: 20px;
  }

  .h1 {
    font-family: Inter, serif;
    font-size: 36px;
    letter-spacing: 1%;
    line-height: 130%;
    text-transform: uppercase;
  }
  .h2 {
    font-family: InterBold, serif;
    font-size: 18px;
    letter-spacing: 5%;
    line-height: 130%;
    text-transform: uppercase;
  }
  .h3 {
    font-family: InterBold, serif;
    font-size: 9px;
    letter-spacing: 10%;
    line-height: 150%;
    text-transform: uppercase;
  }

  .p {
    font-family: Inter, serif;
    font-size: 12px;
    letter-spacing: 0;
    line-height: 165%;
  }
  .text-btn {
    font-family: InterBold, serif;
    font-size: 9px;
    letter-spacing: 10%;
    line-height: 150%;
    text-transform: uppercase;
  }

  .btn-group {
    display: flex;
    flex-direction: row;
    gap: 16px;
  }
  .btn {
    .text-btn();
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
    text-decoration: none;
  }
  .btn-text {
    padding: 16px 24px;
  }
  .btn-primary {
    background-color: @color-gray;
    color: @color-white;
  }
  .btn-light {
    background-color: @color-white;
    color: @color-black;
  }

  .menu-container {
    background-color: @color-beige;
    .menu {
      .h3();
      .grid();
      .logo {
        color: @color-black;
        grid-column: 1 / span 2;
        text-decoration: none;
      }
      .menu-items {
        grid-column: 5 / -1;
        display: flex;
        gap: 20px;
        .menu-item {
          color: @color-black;
          text-decoration: none;
        }
        .menu-item:hover {
          color: @color-black;
          text-decoration: underline;
          text-underline-offset: 8px;
          text-decoration-thickness: 1px;
        }
      }
    }
  }

  .about-container {
    background-color: @color-beige;
    .about {
      .grid();

      .header {
        .h1();
        display: flex;
        flex-direction: column;
        grid-column: 1 / span 12;
        .highlight {
          color: @color-green;
        }
        z-index: 1;
        position: relative;
        .about-image {
          line-height: 0;
          top: 90px;
          left: -16px;
          z-index: -1;
          position: absolute;
        }
      }
      .description-header {
        position: relative;
        grid-column: 8 / -1;
        display: flex;
        flex-direction: column;
        .h2();
      }
      .description-text {
        grid-column: 8 / -1;
        .p();
      }
      .description-buttons {
        grid-column: 8 / -1;
      }
      .description-bullets {
        margin-top: 200px;
        grid-column: 8 / -1;
        display: flex;
        flex-direction: column;
        gap: 8px;
        position: relative;
        .h3();
        .education-btn {
          text-decoration: underline;
          text-decoration-style: dashed;
          text-decoration-thickness: 1px;
          text-decoration-color: @color-gray;
          text-underline-offset: 3px;
          cursor: pointer;
        }
      }
    }
  }


  .education {
      position: absolute;
      border: 1px solid @color-gray;
      background-color: @color-white;
      color: @color-black;
      display: flex;
      flex-direction: column;
      padding: 30px 30px 20px;
      width: 800px;
      top: 110px;
      left: -200px;
      z-index: 1;
      .close {
        position: absolute;
        right: 10px;
        top: 10px;
        cursor: pointer;
      }
      .page-header {
        .h2();
      }
      .bullets {
        padding-top: 20px;
        padding-left: 20px;
        .h3();
        .bullet {
          display: list-item;
          b {
            font-weight: bold;
          }
        }
      }
    .text {
      display: flex;
      flex-direction: column;
      padding-top: 20px;
      padding-left: 20px;
      .h3();
    }
  }

  .inquiry-container {
    background-color: @color-white;
    .inquiry {
      .grid();
      padding-bottom: 80px;
      .inquiry-bullets {
        margin-top: 100px;
        margin-bottom: 140px;
        grid-column: 8 / -1;
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-auto-rows: auto;
        gap: 16px;
        .inquiry-bullet {
          display: flex;
          flex-direction: row;
          gap: 16px;
          .h3();
        }
      }
      .inquiry-page-header {
        grid-column: 1 / span 2;
        .h3();
        display: flex;
        flex-direction: row;
        align-items: center;
        gap: 12px;
      }

      .inquiry-header {
        grid-column: 1 / -1;
        .h1();
        .highlight {
          color: @color-green;
        }
      }
      .inquiry-text {
        grid-column: 1 / span 6;
        .p();
        p {
          margin: 10px 0;
        }
      }
    }
  }

  .troubles-container {
    background-color: @color-green;
    color: @color-white;
    .troubles {
      .grid();
      padding-top: 60px;
      padding-bottom: 60px;
      .header {
        grid-column: 1 / span 6;
        .h2();
      }
      .trouble-bullets {
        grid-column: 1 / span 6;
        display: flex;
        flex-direction: column;
        gap: 16px;
        margin-left: 20px;
        .p();
        .trouble-bullet {
          display: list-item;

        }
      }
      .trouble-buttons {
        grid-column: 8 / -1;
        display: flex;
        flex-direction: column;
        .description {
          margin-top: auto;
          margin-bottom: 20px;
          .p();
        }
      }
    }
  }

  .process-container {
    background-color: @color-white;
    color: @color-black;
    padding-top: 80px;
    padding-bottom: 80px;
    .process {
      .grid();

      .page-header {
        grid-column: 1 / -1;
        .h3();
        display: flex;
        flex-direction: row;
        align-items: center;
        gap: 12px;
      }

      .header {
        grid-column: 1 / span 8;
        grid-row: 2;
        .h1();
        display: flex;
        flex-direction: column;
        .highlight {
          color: @color-green;
        }
      }

      .text {
        grid-column: 8 / -1;
        grid-row: 2 / span 2;
        .p();
        p {
          margin-bottom: 10px;
        }
      }
    }
  }

  .solution-container {
    background-color: @color-white;
    color: @color-black;
    padding-bottom: 80px;
    .solution {
      .grid();

      .page-header {
        grid-column: 8 / -1;
        .h3();
        padding-top: 80px;
        display: flex;
        flex-direction: row;
        align-items: center;
        gap: 12px;
      }

      .header {
        grid-column: 8 / -1;
        .h1();
        display: flex;
        flex-direction: column;
        .highlight {
          color: @color-green;
        }
      }
      .header-wide {
        grid-column: 1 / -1;
        .h1();
        display: flex;
        flex-direction: column;
        .highlight {
          color: @color-green;
        }
      }

      .text {
        grid-column: 8 / -1;
        grid-row: 3 / span 1;
        .p();
        p {
          margin-bottom: 10px;
        }
      }

      .image {
        background-color: @color-beige;
        grid-column: 1 / span 6;
        grid-row: 1 / span 4;
        line-height: 0;
        display: flex;
        justify-content: center;
        padding-bottom: 200px;
        padding-top: 180px;
        img {
          max-width: 220px;
          max-height: 280px;
          transform: rotateY(180deg);
        }
      }
    }
  }

  .conditions-container {
    background-color: @color-green;
    color: @color-white;
    .conditions {
      .grid();
      padding-top: 60px;
      padding-bottom: 60px;
      .page-header {
        grid-column: 1 / span 6;
        .h3();
        display: flex;
        flex-direction: row;
        align-items: center;
        gap: 12px;
      }
      .price-header {
        grid-column: 1 / span 6;
        .h2();
        .price-value {
          padding: 10px 10px;
          white-space: nowrap;
          display: flex;
          flex-direction: column;
          gap: 6px;
          place-self: start;
          .h3();
        }
      }
      .conditions-bullets {
        grid-column: 7 / -1;
        grid-row: 2 / span 2;
        display: flex;
        flex-direction: column;
        gap: 16px;
        margin-left: 20px;
        .p();
        .conditions-bullet {
          display: list-item;
        }
      }
      .buttons {
        grid-column: 7 / -1;
        display: flex;
        flex-direction: column;
        .description {
          margin-top: auto;
          margin-bottom: 20px;
          .p();
        }
      }
    }
  }
  .footer-container {
    background-color: @color-gray;
    color: @color-white;
    padding-top: 60px;
    padding-bottom: 40px;

    .footer {
      .grid();
      .logo {
        .h2();
        color: @color-white;
        grid-column: 1 / span 5;
        text-decoration: none;
      }
      .menu-items {
        .h3();
        grid-column: 10 / -1;
        display: flex;
        flex-direction: column;
        gap: 20px;
        .menu-item {
          color: @color-white;
          text-decoration: none;
        }
      }
    }
  }

}

